--- a/static/css/start.scss
+++ b/static/css/start.scss
@@ -8,7 +8,28 @@ body {
   text-align: center;
 }
 
+.top-logos{
+    
+  display: grid;
+  position: fixed;
+  top: 1em;
+  margin: 1em;
 
+
+  img{
+    width: 10em;
+  }
+  .gulf{
+    position: fixed;
+    right: 0;
+    padding-right: 1em;
+
+  }
+  .define{
+    right: -4em;
+  }
+
+}
 
 
 .typetext{
@@ -177,6 +198,32 @@ body {
     }
    
 
+}
+
+
+.mid{
+  padding-top: 7em;
+  padding-left: 37em;
+  
+  display: flex;
+
+  img{
+    padding-right: .3em;
+  }
+  
+  .rset img{
+    width: 6em;
+    
+  }
+  .iedc img{
+   margin-top: -.8em;
+   width: 6em;
+  }
+  .iedc-grey img{
+    width: 10em;
+    margin-top: -.3em;
+  }
+  
 }
 
 
