--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -9,6 +9,21 @@
 </head>
 <body>
 
+    <section class="top" >
+        <div class="top-logos">
+            <div class="define">
+                <a href="http://rsetiedc.in/define">
+                <img  src="{{ url_for('static',filename='Images/Logo.png') }}" alt="Define">
+            </a>
+            </div>
+            <div class="gulf">
+                <a href="https://www.gulfcareers.com/">
+                 <img  src="{{ url_for('static',filename='Images/gulf-careers-logo-light.png') }}" alt="Gulf Careers">
+                </a>
+            </div>
+        </div>
+    </section>
+
     
     <section class="hero">
         <div class = "container">
@@ -78,10 +93,20 @@
         <div class="rule">
             <a href="rules.html">Rules & Guidelines</a>
         </div>
+        
         <div class="contacts">
             <a href="#">Contacts</a>
         </div>    
     </section>
+
+    
+    <div class="mid">
+        
+        <div class="rset"><a href="https://www.rajagiritech.ac.in/Home/Index.asp"><img  src="{{ url_for('static',filename='Images/AUTONOMUS LOGO1.png') }}" alt="rset"></a></div>
+        <div class="iedc"><a href="https://rsetiedc.in/home"><img  src="{{ url_for('static',filename='Images/RSET IEDC.png') }}" alt="Rset-iedc"></a></div>
+        <div class="iedc-grey"><a href="https://iedc.cet.ac.in/"><img  src="{{ url_for('static',filename='Images/iedc logo gray.png') }}" alt="iedc"></a></div>
+        
+    </div>
     
 
 
