--- a/templates/round6.html
+++ b/templates/round6.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h2>Email Clue here</h2> 
+    <a id="riddle" href="#">Riddle link here</a>
     <form action="" , method="POST">
         <div class="answer">
         {{ form.hidden_tag() }}                
