--- a/static/css/landing-page.scss
+++ b/static/css/landing-page.scss
@@ -5,7 +5,7 @@ body{
     margin: 0;
     font-family:Cinzel;
 }
-
+//////////////////////////////////////TOP LOGO////////////////////////////////////////
 .top-logos{
     
   display: grid;
@@ -28,7 +28,7 @@ body{
   }
 
 }
-
+//////////////////////////////////////TOP LOGO////////////////////////////////////////
 
 
 .hero{
@@ -157,6 +157,8 @@ body{
 
   }
 
+  //////////////////////////////////////BOTTOM LOGO////////////////////////////////////////
+
   .mid{
     padding-top: 7em;
     padding-left: 37em;
@@ -181,4 +183,5 @@ body{
     }
     
   }
+  //////////////////////////////////////BOTTOM LOGO////////////////////////////////////////
   
