--- a/static/css/round1.css
+++ b/static/css/round1.css
@@ -2,18 +2,44 @@
 body {
   background-color: #969696;
   font-family: Cinzel;
+  margin: 0;
+}
+
+.back {
+  background-color: #969696;
+  padding: 3em;
+  margin-bottom: -4em;
+  z-index: 999;
+}
+
+.left {
+  padding-right: 37em;
+  z-index: 999;
+}
+
+.right {
+  padding-right: 40.5em;
+  position: relative;
+  z-index: 999;
+}
+
+.bot {
+  padding-bottom: 3em;
+  z-index: 999;
 }
 
 .image1 {
-  text-align: center;
-  margin-top: 7em;
+  margin-top: 3em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
 }
 
 .image1 img {
-  border: 3px solid #535353;
-  background-color: #535353;
-  border-radius: 1em;
-  padding: 10em;
+  margin: -4em;
+  width: 25em;
+  z-index: 99;
 }
 
 .ans {
@@ -42,7 +68,21 @@ button:hover {
 
 .enter {
   text-align: center;
-  padding-bottom: 3em;
+  padding-bottom: 0em;
+}
+
+#homepage {
+  color: black;
+  margin-top: -3em;
+  text-decoration: none;
+  font-family: Cinzel;
+  border-radius: .5em;
+  border: 3px solid #535353;
+}
+
+#homepage:hover {
+  background-color: #535353;
+  color: white;
 }
 
 #Myid {
