--- a/static/css/start.css
+++ b/static/css/start.css
@@ -38,12 +38,12 @@ body {
 }
 
 .hero {
-  padding: 1em;
+  padding-top: 3em;
 }
 
 .hero .container {
   text-align: center;
-  margin-top: 4em;
+  margin-top: 8em;
   margin-bottom: 3em;
 }
 
@@ -59,7 +59,7 @@ body {
 .start {
   text-align: center;
   margin-top: 3em;
-  margin-left: 3em;
+  margin-left: 1em;
 }
 
 .start a {
@@ -81,6 +81,7 @@ body {
 
 .hero .container {
   text-align: center;
+  padding-left: .3em;
   margin-top: 4em;
   margin-bottom: 0em;
 }
@@ -114,6 +115,7 @@ li {
 li span {
   display: block;
   font-size: 4.5rem;
+  margin-top: -.5em;
 }
 
 @media all and (max-width: 768px) {
