--- a/static/css/start.scss
+++ b/static/css/start.scss
@@ -8,6 +8,8 @@ body {
   text-align: center;
 }
 
+//////////////////////////////////////TOP LOGO////////////////////////////////////////
+
 .top-logos{
     
   display: grid;
@@ -31,6 +33,8 @@ body {
 
 }
 
+//////////////////////////////////////TOP LOGO////////////////////////////////////////
+
 
 .typetext{
   font-size:30px; 
@@ -44,13 +48,13 @@ body {
 
 
 .hero{
-    padding: 1em;
+    padding-top: 3em;
 }
 
 .hero {
    .container{
        text-align: center;
-       margin-top: 4em;
+       margin-top: 8em;
        margin-bottom: 3em;
    }
   }
@@ -68,23 +72,23 @@ body {
 .start{
     text-align: center;
     margin-top: 3em; 
-    margin-left: 3em;   
+    margin-left: 1em;   
     a{
         font-family: Cinzel;
         
         
         letter-spacing: .2em;
         font-size: 1em;
-                color: gray;
-                text-decoration: none;
-                border-radius: .8em;
-                border: 3px solid rgb(255, 0, 0);
-                padding: .2em;
-                
-                &:hover{
-                    background-color: #ff0000;
-                    color: aliceblue;
-                    cursor: pointer;
+        color: gray;
+        text-decoration: none;
+        border-radius: .8em;
+        border: 3px solid rgb(255, 0, 0);
+        padding: .2em;
+        
+        &:hover{
+            background-color: #ff0000;
+            color: aliceblue;
+            cursor: pointer;
     }
     }
 }
@@ -93,6 +97,7 @@ body {
 .hero {
     .container{
         text-align: center;
+        padding-left: .3em;
         margin-top: 4em;
         margin-bottom: 0em;
     }
@@ -109,6 +114,7 @@ body {
      color: #8d4123;
      margin: 0 auto;
      text-align: center;
+     
    }
    
    h1 {
@@ -128,6 +134,7 @@ body {
    li span {
      display: block;
      font-size: 4.5rem;
+     margin-top: -.5em;
    }
    
  
@@ -200,7 +207,7 @@ body {
 
 }
 
-
+//////////////////////////////////////BOTTOM LOGO////////////////////////////////////////
 .mid{
   padding-top: 7em;
   padding-left: 37em;
@@ -220,11 +227,13 @@ body {
    width: 6em;
   }
   .iedc-grey img{
-    width: 10em;
+    width: 10em; 
     margin-top: -.3em;
   }
   
 }
+
+//////////////////////////////////////BOTTOM LOGO////////////////////////////////////////
 
 
 
