--- a/static/css/round1.scss
+++ b/static/css/round1.scss
@@ -4,6 +4,7 @@ body{
     background-color: rgb(150, 150, 150);
     font-family: Cinzel;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
   
 }
 .back{
@@ -36,7 +37,9 @@ body{
     position: relative;
     
     img{
-        margin: -4em;
+        margin: -2.9em;
+        margin-top: -1.4em;
+        margin-bottom: -2.35em;
         width: 25em;
         z-index: 99;
     }
@@ -56,7 +59,8 @@ body{
     
 }
 
-button{
+
+    button{
     color: black;
     margin-top: -3em;
     
@@ -71,6 +75,7 @@ button{
         color: white;
     }
 }
+
 .enter{
     text-align: center;
     padding-bottom: 0em;
@@ -128,3 +133,90 @@ button{
 }
 
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1000; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+//   #myBtn {
+//       &:hover{
+//         width: 5em;
+//         cursor: pointer;
+//       }
+//   }
+.hint-btn{
+    
+    display: grid;
+    position: fixed;
+    bottom: 3em;
+    margin: 1em;
+
+    #myBtn{
+        width: 2.5em;
+        position: fixed;
+        right: 0;
+        padding-right: 1em;
+       
+        &:hover{
+            width: 2.8em;
+            cursor: pointer;
+        }
+    }
+    
+}
+
+.hints{
+    li{
+    &:hover{
+        font-weight: bolder;
+        color: black;
+    }
+}
+}
+
+
+#ten-countdown {
+    /* text-align: center; */
+    // border: 5px solid #004853;
+    display:inline;
+    padding: 5px;
+    color: #004853;
+    font-family: Verdana, sans-serif, Arial;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+     
+}
