--- a/static/css/round5-answer.css
+++ b/static/css/round5-answer.css
@@ -101,4 +101,87 @@ button:hover {
   background-color: black;
   color: whitesmoke;
 }
+
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1000;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.hint-btn {
+  display: -ms-grid;
+  display: grid;
+  position: fixed;
+  bottom: 3em;
+  margin: 1em;
+}
+
+.hint-btn #myBtn {
+  width: 2.5em;
+  position: fixed;
+  right: 0;
+  padding-right: 1em;
+}
+
+.hint-btn #myBtn:hover {
+  width: 2.8em;
+  cursor: pointer;
+}
+
+.hints li:hover {
+  font-weight: bolder;
+  color: black;
+}
+
+#ten-countdown {
+  /* text-align: center; */
+  display: inline;
+  padding: 5px;
+  color: #004853;
+  font-family: Verdana, sans-serif, Arial;
+  font-size: 40px;
+  font-weight: bold;
+  text-decoration: none;
+}
 /*# sourceMappingURL=round5-answer.css.map */
