--- a/static/css/ammu_landing-page.css
+++ b/static/css/ammu_landing-page.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap");
 body {
   background-color: black;
-  margin: 0;
+  margin: 1em;
   font-family: Cinzel;
 }
 
@@ -126,7 +126,7 @@ li span {
   display: grid;
   position: fixed;
   padding-top: 100px;
-  bottom: 0em;
+  bottom: 1em;
   margin: 1em;
 }
 
@@ -141,7 +141,7 @@ li span {
 
 .footer .contacts {
   position: fixed;
-  right: 1em;
+  right: 0em;
   padding-right: 1em;
 }
 
@@ -160,22 +160,22 @@ li span {
 
 .mid .rset img {
   width: 8em;
-  /* height: 70px; */
+  margin-top: .8em;
+  
   margin-right: 30px;
-  margin-bottom: -50px;
 }
 
 .mid .iedc img {
-  margin-top: -.2em;
+  margin-top: 0em;
   width: 7em;
-  /* height: 100px; */
+  
   margin-right: 30px;
 }
 
 .mid .iedc-grey img {
-  width: 10em;
-  /* height: 80px; */
-  margin-top: .7em;
+  width: 11.5em;
+  
+  margin-top: .8em;
   margin-right: 30px;
 }
 .mid .define img {
@@ -185,9 +185,49 @@ li span {
 
 }
 .mid .gulf img {
-  width: 8em;
-  /* height: 80px; */
-  margin-top: .35em;
+  width: 9em;
+  
+  margin-top: .5em;
   margin-right: 30px;
+}
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 /*# sourceMappingURL=landing-page.css.map */
