--- a/templates/ammu_landing-page.html
+++ b/templates/ammu_landing-page.html
@@ -10,20 +10,76 @@
 </head>
 <body>
 
-    <!-- <section class="top" >
-        <div class="top-logos">
-            <div class="define">
-                <a href="http://rsetiedc.in/define">
-                <img  src="/static/Images/Logo.png" alt="Define">
-            </a>
-            </div>
-            <div class="gulf">
-                <a href="https://www.gulfcareers.com/">
-                 <img src="/static/Images/gulf-careers-logo-light.png"  alt="Gulf Careers">
-                </a>
-            </div>
-        </div>
-    </section> -->
+
+  
+    
+
+<!-- Trigger/Open The Modal -->
+
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Please use a desktop to view this website .Thank you!</p>
+  </div>
+
+</div>
+
+
+
+<script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+    
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+    
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+    
+    // When the user clicks the button, open the modal 
+    // btn.onclick = function() {
+    //   modal.style.display = "block";
+    // }
+    
+    // // When the user clicks on <span> (x), close the modal
+    // span.onclick = function() {
+    //   modal.style.display = "none";
+    // }
+    
+    // // When the user clicks anywhere outside of the modal, close it
+    // window.onclick = function(event) {
+    //   if (event.target == modal) {
+    //     modal.style.display = "none";
+    //   }
+    // }
+
+    var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    if (isMobile) {
+        modal.style.display = "block";
+    }
+    else {
+        modal.style.display = "none";
+    }
+    
+    </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     
     <section class="hero">
@@ -45,7 +101,9 @@
           </ul>
         </div>
     </div>
-    
+
+
+
 
 
     <script>
