--- a/static/css/ammu_landing-page.css
+++ b/static/css/ammu_landing-page.css
@@ -13,21 +13,17 @@ body {
   top: 1em;
   margin: 1em;
 }
-
 .top-logos img {
   width: 10em;
 }
-
 .top-logos .gulf {
   position: fixed;
   right: 0;
   padding-right: 1em;
 }
-
 .top-logos .define {
   right: -4em;
 } */
-
 .hero {
   padding: 0em;
 }
@@ -155,56 +151,60 @@ li span {
 
 .mid img {
   padding-right: .3em;
-  
 }
 
 .mid .rset img {
   width: 8em;
   margin-top: .8em;
-  
   margin-right: 30px;
 }
 
 .mid .iedc img {
   margin-top: 0em;
   width: 7em;
-  
   margin-right: 30px;
 }
 
 .mid .iedc-grey img {
   width: 11.5em;
-  
   margin-top: .8em;
   margin-right: 30px;
 }
+
 .mid .define img {
   width: 8.5em;
   margin-top: -.3em;
   margin-right: 30px;
-
 }
+
 .mid .gulf img {
   width: 9em;
-  
   margin-top: .5em;
   margin-right: 30px;
 }
 
-
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -230,4 +230,4 @@ li span {
   text-decoration: none;
   cursor: pointer;
 }
-/*# sourceMappingURL=landing-page.css.map */
+/*# sourceMappingURL=ammu_landing-page.css.map */
