--- a/static/css/round2.css
+++ b/static/css/round2.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700;900&display=swap");
 body {
   display: -ms-grid;
   display: grid;
@@ -8,106 +9,42 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   height: 100vh;
-  background: #D9D7DD;
-}
-
-.clock {
-  border-radius: 100%;
-  background: #ffffff;
-  font-family: "Montserrat";
-  border: 5px solid white;
-  -webkit-box-shadow: inset 2px 3px 8px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: inset 2px 3px 8px 0 rgba(0, 0, 0, 0.1);
-}
-
-.wrap {
-  overflow: hidden;
-  position: relative;
-  width: 350px;
-  height: 350px;
-  border-radius: 100%;
-}
-
-.minute,
-.hour {
-  position: absolute;
-  height: 100px;
-  width: 6px;
-  margin: auto;
-  top: -27%;
-  left: 0;
-  bottom: 0;
-  right: 0;
   background: black;
-  -webkit-transform-origin: bottom center;
-          transform-origin: bottom center;
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-  z-index: 1;
+  font-family: Cinzel;
 }
 
-.minute {
-  position: absolute;
-  height: 130px;
-  width: 4px;
-  top: -38%;
-  left: 0;
-  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+.wdiv {
+  text-align: center;
+  margin-top: -5em;
 }
 
-.second {
-  position: absolute;
-  height: 90px;
-  width: 2px;
-  margin: auto;
-  top: -26%;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  border-radius: 4px;
-  background: #FF4B3E;
-  -webkit-transform-origin: bottom center;
-          transform-origin: bottom center;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  z-index: 1;
+.watch {
+  width: 70%;
 }
 
-.dot {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 12px;
-  height: 12px;
-  border-radius: 100px;
-  background: white;
-  border: 2px solid #1b1b1b;
-  border-radius: 100px;
-  margin: auto;
-  z-index: 1;
+.mp3 audio {
+  background-color: #000;
 }
 
 .ans {
   text-align: center;
-  margin: 0em;
+  margin-top: -7em;
+  margin-left: 2em;
 }
 
 .ans input[name="answer"] {
   padding-right: 4em;
   padding-top: .5em;
+  font-size: large;
+  border: 3px solid #535353;
 }
 
 .ans input[type="submit"] {
+  font-family: Cinzel;
   color: black;
   margin-top: 1em;
   border: 3px solid #535353;
+  font-size: large;
 }
 
 .ans input[type="submit"]:hover {
@@ -122,15 +59,15 @@ body {
 
 .next-clue a {
   text-decoration: none;
-  border: 2px solid black;
-  color: black;
+  border: 2px solid whitesmoke;
+  color: whitesmoke;
   padding: .2em;
   border-radius: .6em;
 }
 
 .next-clue a:hover {
-  background-color: black;
-  color: whitesmoke;
+  background-color: whitesmoke;
+  color: black;
 }
 
 .modal {
