--- a/static/css/ammu_landing-page.css
+++ b/static/css/ammu_landing-page.css
@@ -143,30 +143,30 @@ li span {
 
 .mid {
   padding-top: 6em;
-  padding-left: 23em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  padding-left: 0em;
 }
 
 .mid img {
   padding-right: .3em;
 }
 
-.mid .rset img {
+.rset img {
   width: 8em;
-  margin-top: .8em;
+  margin-top: 2em;
+  padding-bottom: 1em;
   margin-right: 30px;
 }
 
 .mid .iedc img {
   margin-top: 0em;
   width: 7em;
+  padding-bottom: .5em;
   margin-right: 30px;
 }
 
 .mid .iedc-grey img {
   width: 11.5em;
+  padding-bottom: 1em;
   margin-top: .8em;
   margin-right: 30px;
 }
@@ -179,6 +179,7 @@ li span {
 
 .mid .gulf img {
   width: 9em;
+  padding-bottom: 1em;
   margin-top: .5em;
   margin-right: 30px;
 }
