--- a/templates/ammu_landing-page.html
+++ b/templates/ammu_landing-page.html
@@ -158,15 +158,17 @@
         </div>    
     </section>
 
-    
+    <section class="cmid" style="text-align: center;">
     <div class="mid">
-        <div class="define"> <a href="http://rsetiedc.in/define"><img  src="{{ url_for('static',filename='Images/Logo.png') }}" alt="Define"></a></div>
-        <div class="rset"><a href="https://www.rajagiritech.ac.in/Home/Index.asp"><img  src="{{ url_for('static',filename='Images/AUTONOMUS LOGO1.png') }}" alt="rset"></a></div>
-        <div class="iedc"><a href="https://rsetiedc.in/home"><img  src="{{ url_for('static',filename='Images/RSET IEDC.png') }}" alt="Rset-iedc"></a></div>
-        <div class="iedc-grey"><a href="https://iedc.cet.ac.in/"><img  src="{{ url_for('static',filename='Images/iedc logo gray.png') }}" alt="iedc"></a></div>
-        <div class="gulf"><a href="https://www.gulfcareers.com/"><img src="{{ url_for('static',filename='Images/gulf-careers-logo-light.png') }}"  alt="Gulf Careers"></a></div>
+        
+         <a class="define" href="http://rsetiedc.in/define"><img  src="{{ url_for('static',filename='Images/Logo.png') }}" alt="Define"></a>
+        <a class="rset" href="https://www.rajagiritech.ac.in/Home/Index.asp"><img  src="{{ url_for('static',filename='Images/AUTONOMUS LOGO1.png') }}" alt="rset"></a>
+        <a  class="iedc" href="https://rsetiedc.in/home"><img  src="{{ url_for('static',filename='Images/RSET IEDC.png') }}" alt="Rset-iedc"></a>
+        <a class="iedc-grey" href="https://iedc.cet.ac.in/"><img  src="{{ url_for('static',filename='Images/iedc logo gray.png') }}" alt="iedc"></a>
+        <a class="gulf" href="https://www.gulfcareers.com/"><img src="{{ url_for('static',filename='Images/gulf-careers-logo-light.png') }}"  alt="Gulf Careers"></a>
         
     </div>
+    </section>
     
 
 
