--- a/templates/round2.html
+++ b/templates/round2.html
@@ -41,7 +41,7 @@
   
         
     <div class="mp3" style="text-align: center; margin-top: -9em;" >
-        <audio  style="width: 10em; height: 20px; " src="{{url_for('static',filename='Images/round2.mp3')}}" controls autoplay>
+        <audio  style="width: 10em; height: 20px; " src="{{url_for('static',filename='Images/round2.mp3')}}" controls autoplay loop>
         </audio>
     </div>
 
