--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -172,9 +172,9 @@ typewriter();
 
 <div class="mid">
         
-    <div class="rset"><a href="https://www.rajagiritech.ac.in/Home/Index.asp"><img  src="{{ url_for('static',filename='Images/AUTONOMUS LOGO1.png') }}" alt="rset"></a></div>
-    <div class="iedc"><a href="https://rsetiedc.in/home"><img  src="{{ url_for('static',filename='Images/RSET IEDC.png') }}" alt="Rset-iedc"></a></div>
-    <div class="iedc-grey"><a href="https://iedc.cet.ac.in/"><img  src="{{ url_for('static',filename='Images/iedc logo gray.png') }}" alt="iedc"></a></div>
+    <a class="rset" href="https://www.rajagiritech.ac.in/Home/Index.asp"><img  src="{{ url_for('static',filename='Images/AUTONOMUS LOGO1.png') }}" alt="rset"></a>
+    <a  class="iedc" href="https://rsetiedc.in/home"><img  src="{{ url_for('static',filename='Images/RSET IEDC.png') }}" alt="Rset-iedc"></a>
+    <a class="iedc-grey" href="https://iedc.cet.ac.in/"><img  src="{{ url_for('static',filename='Images/iedc logo gray.png') }}" alt="iedc"></a>
     
 </div>
 
